[package]
name = "junit-to-slack-reporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
glob = "0.3.1"
roxmltree = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
