[package]
name = "testvox"
description = "A library that turns test reports into human readable messages"
version = "0.2.0"
edition = "2021"
authors = ["Andrea Di Lisio <andrea.dilisio91@gmail.com>"]
repository = "https://github.com/dili91/testvox"
readme = "README.md"
keywords = ["ci", "testing"]
license-file = "LICENSE"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
glob = "0.3.1"
roxmltree = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
url = { version = "2.5.0", features = ["serde"]}

[dev-dependencies]
assert_json = "0.1.0"
indoc = "2.0.5"
test-case = "3.3.1"
